--- a/client/src/styles/adminHome.module.css
+++ b/client/src/styles/adminHome.module.css
@@ -17,3 +17,7 @@
     box-shadow: 1px 1px 5px 1px #fff;
     box-shadow: 1px 2px 7px #111 inset;
 }
+
+.button:active{
+    background-color: rgb(199, 199, 199);
+}
