--- a/client/src/styles/adminHome.module.css
+++ b/client/src/styles/adminHome.module.css
@@ -1,14 +1,14 @@
 .button{
     margin-top: 14px;
-    width: 80%;
+    width: 90%;
     padding: 13px;
     background-color: #111;
     border-radius: 30px;
-    color: #fff;
-    font-size: 15px;
-    font-weight: bold;
+    color: rgba(255, 255, 255, 0.898);
     border: 0;
     box-shadow: 1px 1px 5px 1px #111;
+    display: flex;
+    justify-content: center;
 }
 
 .button:hover{
@@ -20,4 +20,12 @@
 
 .button:active{
     background-color: rgb(199, 199, 199);
+}
+
+.butttonText{
+    font-size: 18px;
+    font-family: sans-serif;
+    font-weight: bold;
+    margin-top: auto;
+    margin-left: 7px;
 }
