--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -64,3 +64,8 @@ h1 ,h2, h3, h4, h5, h6, a, p {
   font-size: 10px;
   font-weight: 900;
 }
+
+.css-1qvr50w-MuiTypography-root{
+  font-size: 13px;
+  font-weight: 900;
+}
