--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -69,3 +69,21 @@ h1 ,h2, h3, h4, h5, h6, a, p {
   font-size: 13px;
   font-weight: 900;
 }
+
+.workerList{
+  background: #fff;
+  color: #000;
+  border: 1px solid black;
+  font-weight: bold;
+  text-align: center;
+  border-radius: 40px;
+  width: 90%;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  box-shadow: -3px 3px 3px 1px rgb(0 0 0 / 20%), 1px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
+}
+
+.workerList:active{
+  box-shadow: inset 0 0 10px #fff;
+  background: rgba(17, 17, 17, 0.922);
+  color: #fff;
+}
