--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -87,3 +87,22 @@ h1 ,h2, h3, h4, h5, h6, a, p {
   background: rgba(17, 17, 17, 0.922);
   color: #fff;
 }
+
+.file-upload {
+	position: relative;
+	display: inline-block;
+}
+
+.file-upload__label {
+  display: block;
+  width: 20px;
+  margin-left: -6px;
+  height: 25px;
+}
+    
+.file-upload__input {
+    position: absolute;
+    opacity: 0;
+    width: 27px;
+    margin: -19px;
+}
