--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -56,7 +56,7 @@ h1 ,h2, h3, h4, h5, h6, a, p {
   box-shadow: -3px 3px 3px 1px rgb(0 0 0 / 20%), 1px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
 }
 
-.css-132a6sb-MuiTableCell-root , .css-1bhpkcd-MuiTableCell-root{
+.css-132a6sb-MuiTableCell-root , .css-1bhpkcd-MuiTableCell-root , .css-1dydcym-MuiTableCell-root{
   color: #fff;
 }
 
@@ -114,8 +114,12 @@ h1 ,h2, h3, h4, h5, h6, a, p {
 
 .css-11xur9t-MuiPaper-root-MuiTableContainer-root{
   overflow-y: auto;
-  height: 550px;
+  height: 540px;
 }
 .css-11xur9t-MuiPaper-root-MuiTableContainer-root::-webkit-scrollbar {
   display: none;
+}
+
+.css-md26zr-MuiInputBase-root-MuiOutlinedInput-root{
+  background-color: #fff;
 }
