--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -135,3 +135,30 @@ img {
 .css-i4bv87-MuiSvgIcon-root{
   cursor: pointer;
 }
+
+/* ///////////////////////////////////////// */
+.sidebar {
+  position: absolute;
+  width: 33.3333%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  border-right: 1px solid rgba(0, 0, 0, 0.25);
+}
+
+.map {
+  position: absolute;
+  left: 33.3333%;
+  width: 66.6666%;
+  top: 0;
+  bottom: 0;
+}
+
+.heading {
+  background: #fff;
+  border-bottom: 1px solid #eee;
+  height: 60px;
+  line-height: 60px;
+  padding: 0 10px;
+}
