--- a/client/src/styles/adminHome.module.css
+++ b/client/src/styles/adminHome.module.css
@@ -29,3 +29,25 @@
     margin-top: auto;
     margin-left: 7px;
 }
+
+.butttonXsText{
+    font-size: 10px;
+    font-family: sans-serif;
+    font-weight: bold;
+    margin-top: auto;
+    margin-top: 7px;
+    margin-left: 6px;
+}
+
+.buttonXs{
+    margin-top: 14px;
+    width: 90%;
+    padding: 5px;
+    background-color: #111;
+    border-radius: 30px;
+    color: rgba(255, 255, 255, 0.898);
+    border: 0;
+    box-shadow: 1px 1px 5px 1px #111;
+    display: flex;
+    justify-content: center;
+}
