--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -229,6 +229,10 @@ h1 ,h2, h3, h4, h5, h6, a, p {
   display: none;
 }
 
+.Toastify__toast-body{
+  font-size: 12px;
+}
+
 /* ///////////////////// */
 
 .map {
