--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -90,6 +90,11 @@ h1 ,h2, h3, h4, h5, h6, a, p {
   font-weight: 900;
 }
 
+.css-1g3izzu{
+  font-size: 13px;
+  font-weight: 900;
+}
+
 .workerList{
   background: #fff;
   color: #000;
